--- a/server/tests/drivers/google/fixtures/test_0006_can_update_blob_metadata.yml
+++ b/server/tests/drivers/google/fixtures/test_0006_can_update_blob_metadata.yml
@@ -1,46 +1,50 @@
---- 
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: put
-    uri: https://testbucki2rpux3wdelmegoogel.commondatastorage.googleapis.com/testblobk1ds91kVdelmegoogel
-    body: 
-      string: ""
-    headers: 
-      x-goog-copy-source: 
+    uri: https://testbucki2rpux3wdelmegoogel.storage.googleapis.com/testblobk1ds91kVdelmegoogel
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      x-goog-copy-source:
       - /testbucki2rpux3wdelmegoogel/testblobk1ds91kVdelmegoogel
-      x-goog-metadata-directive: 
+      x-goog-metadata-directive:
       - REPLACE
-      Authorization: 
-      - GOOG1 GOOGXKQLYTEOZTILUBZ5:PxARsMZjsd/7EloIXv4FqJu+KQA=
-      x-goog-meta-author: 
+      author:
       - ApacheDeltacloud
-      x-goog-meta-oof: 
+      oof:
       - rab
-      Date: 
-      - Thu, 28 Jun 2012 13:51:58 +0000
-  response: 
-    status: 
+      Date:
+      - Wed, 26 Sep 2012 11:05:39 +0000
+      Authorization:
+      - GOOG1 GOOG4PBMMHEB2BTY6Q7U:EZt44tmNIIlcLfYDdOuMI3/hAno=
+  response:
+    status:
       code: 200
       message: 
-    headers: 
-      Content-Length: 
-      - "175"
-      Server: 
-      - HTTP Upload Server Built on Jun 14 2012 02:12:09 (1339665129)
-      Expires: 
-      - Fri, 01 Jan 1990 00:00:00 GMT
-      Content-Type: 
-      - text/html; charset=UTF-8
-      Pragma: 
+    headers:
+      Server:
+      - HTTP Upload Server Built on Sep 5 2012 17:14:59 (1346890499)
+      ETag:
+      - ! '"6051b502c4281855ff32dc3e924fe3b0"'
+      Vary:
+      - Origin
+      Date:
+      - Wed, 26 Sep 2012 11:04:49 GMT
+      Pragma:
       - no-cache
-      Date: 
-      - Thu, 28 Jun 2012 13:51:59 GMT
-      ETag: 
-      - "\"6051b502c4281855ff32dc3e924fe3b0\""
-      Cache-Control: 
+      Expires:
+      - Fri, 01 Jan 1990 00:00:00 GMT
+      Cache-Control:
       - no-cache, no-store, must-revalidate
-    body: 
-      string: <?xml version='1.0' encoding='UTF-8'?><CopyObjectResult><LastModified>2012-06-28T13:51:55.477Z</LastModified><ETag>"6051b502c4281855ff32dc3e924fe3b0"</ETag></CopyObjectResult>
+      Content-Length:
+      - '175'
+      Content-Type:
+      - text/html; charset=UTF-8
+    body:
+      encoding: US-ASCII
+      string: <?xml version='1.0' encoding='UTF-8'?><CopyObjectResult><LastModified>2012-09-26T11:04:47.196Z</LastModified><ETag>"6051b502c4281855ff32dc3e924fe3b0"</ETag></CopyObjectResult>
     http_version: 
-  recorded_at: Thu, 28 Jun 2012 13:51:59 GMT
-recorded_with: VCR 2.2.2
+  recorded_at: Wed, 26 Sep 2012 11:05:40 GMT
+recorded_with: VCR 2.2.5
