CIMI unit tests: compact the file hierarchy of tests some
We used to keep the model tests in tests/cimi/spec/cimi/models, which was
way deeper than we needed. This patch moves those tests to
tests/cimi/models and the corresponding test data to tests/cimi/data

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -199,8 +199,8 @@ namespace :test do
         t.loader = :testrb
       end
       t.test_files = FileList[
-        'tests/cimi/spec/cimi/model/*spec.rb',        # CIMI frontend serialization API tests
-        'tests/cimi/collections/*test.rb',        # CIMI frontend API tests
+        'tests/cimi/model/*spec.rb',            # CIMI frontend serialization API tests
+        'tests/cimi/collections/*test.rb',      # CIMI frontend API tests
       ]
     end
   end
