--- a/server/tests/drivers/rhevm/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://unknown:wrong@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d
+    uri: https://unknown:wrong@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
     body:
       encoding: US-ASCII
       string: ''
@@ -20,27 +20,27 @@ http_interactions:
       code: 401
       message: Unauthorized
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:12:08 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=nqlELoKXom85gQr6kcO4QkeX; Path=/api; Secure
       Www-Authenticate:
-      - Basic realm = "RHEVM"
+      - Basic realm="ENGINE"
       Content-Type:
       - text/html;charset=utf-8
       Content-Length:
-      - '952'
-      Date:
-      - Wed, 25 Jul 2012 11:47:08 GMT
+      - '978'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
-      string: ! '<html><head><title>JBoss Web/2.1.11.GA - Error report</title><style><!--H1
+      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
         {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
         H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
         H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
@@ -50,7 +50,7 @@ http_interactions:
         {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
         Status 401 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
         <u></u></p><p><b>description</b> <u>This request requires HTTP authentication
-        ().</u></p><HR size="1" noshade="noshade"><h3>JBoss Web/2.1.11.GA</h3></body></html>'
+        ().</u></p><HR size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:48:13 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Wed, 07 Nov 2012 15:12:10 GMT
+recorded_with: VCR 2.2.5
