--- a/server/tests/drivers/rhevm/fixtures/test_0002_must_return_list_of_realms.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0002_must_return_list_of_realms.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
     body:
       encoding: US-ASCII
       string: ''
@@ -20,38 +20,39 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:48 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=41pE3yfOUf9AYSPXOMQrc6b-; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '715'
-      Date:
-      - Wed, 25 Jul 2012 11:53:48 GMT
+      - '828'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_center
-        id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n
-        \   <name>engops-nfs</name>\n    <description></description>\n    <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \   <storage_type>nfs</storage_type>\n    <storage_format>v1</storage_format>\n
-        \   <version minor=\"0\" major=\"3\"/>\n    <supported_versions>\n        <version
-        minor=\"0\" major=\"3\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\" id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n
+        \   <name>Default</name>\n    <description>The default Data Center</description>\n
+        \   <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n    <storage_type>nfs</storage_type>\n    <storage_format>v3</storage_format>\n
+        \   <version major=\"3\" minor=\"1\"/>\n    <supported_versions>\n        <version
+        major=\"3\" minor=\"1\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
         \   </status>\n</data_center>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:54:54 GMT
+  recorded_at: Wed, 07 Nov 2012 15:14:49 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/clusters?search=datacenter=engops-nfs
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/clusters?search=datacenter=Default
     body:
       encoding: US-ASCII
       string: ''
@@ -69,40 +70,43 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:48 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=8S2jwmVDpMUJa6xTi0N+CG5Z; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '971'
-      Date:
-      - Wed, 25 Jul 2012 11:53:49 GMT
+      - '1232'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<clusters>\n
-        \   <cluster id=\"3c8af388-cff6-11e0-9267-52540013f702\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702\">\n
-        \       <name>engops-nfs</name>\n        <link rel=\"networks\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702/networks\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702/permissions\"/>\n
-        \       <cpu id=\"Intel Conroe Family\"/>\n        <data_center id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\"/>\n        <memory_policy>\n
-        \           <overcommit percent=\"100\"/>\n            <transparent_hugepages>\n
-        \               <enabled>false</enabled>\n            </transparent_hugepages>\n
-        \       </memory_policy>\n        <scheduling_policy/>\n        <version minor=\"0\"
-        major=\"3\"/>\n        <error_handling>\n            <on_error>migrate</on_error>\n
-        \       </error_handling>\n    </cluster>\n</clusters>\n"
+        \   <cluster href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95\" id=\"99408929-82cf-4dc7-a532-9d998063fa95\">\n
+        \       <name>Default</name>\n        <description>The default server cluster</description>\n
+        \       <link href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/networks\"
+        rel=\"networks\"/>\n        <link href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/glustervolumes\"
+        rel=\"glustervolumes\"/>\n        <cpu id=\"Intel Westmere Family\"/>\n        <data_center
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\" id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\"/>\n
+        \       <memory_policy>\n            <overcommit percent=\"150\"/>\n            <transparent_hugepages>\n
+        \               <enabled>true</enabled>\n            </transparent_hugepages>\n
+        \       </memory_policy>\n        <scheduling_policy/>\n        <version major=\"3\"
+        minor=\"1\"/>\n        <error_handling>\n            <on_error>migrate</on_error>\n
+        \       </error_handling>\n        <virt_service>true</virt_service>\n        <gluster_service>false</gluster_service>\n
+        \   </cluster>\n</clusters>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:54:54 GMT
+  recorded_at: Wed, 07 Nov 2012 15:14:49 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
     body:
       encoding: US-ASCII
       string: ''
@@ -120,38 +124,39 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:49 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=V4Gv7kPz3dqjIKfC-amdLbwq; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '715'
-      Date:
-      - Wed, 25 Jul 2012 11:53:49 GMT
+      - '828'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_center
-        id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n
-        \   <name>engops-nfs</name>\n    <description></description>\n    <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \   <storage_type>nfs</storage_type>\n    <storage_format>v1</storage_format>\n
-        \   <version minor=\"0\" major=\"3\"/>\n    <supported_versions>\n        <version
-        minor=\"0\" major=\"3\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\" id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n
+        \   <name>Default</name>\n    <description>The default Data Center</description>\n
+        \   <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n    <storage_type>nfs</storage_type>\n    <storage_format>v3</storage_format>\n
+        \   <version major=\"3\" minor=\"1\"/>\n    <supported_versions>\n        <version
+        major=\"3\" minor=\"1\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
         \   </status>\n</data_center>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:54:54 GMT
+  recorded_at: Wed, 07 Nov 2012 15:14:50 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
     body:
       encoding: US-ASCII
       string: ''
@@ -169,38 +174,39 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:49 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=FmdEkYnmZZwNyZv3a1e7-ybn; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '715'
-      Date:
-      - Wed, 25 Jul 2012 11:53:49 GMT
+      - '828'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_center
-        id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n
-        \   <name>engops-nfs</name>\n    <description></description>\n    <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \   <storage_type>nfs</storage_type>\n    <storage_format>v1</storage_format>\n
-        \   <version minor=\"0\" major=\"3\"/>\n    <supported_versions>\n        <version
-        minor=\"0\" major=\"3\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\" id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n
+        \   <name>Default</name>\n    <description>The default Data Center</description>\n
+        \   <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n    <storage_type>nfs</storage_type>\n    <storage_format>v3</storage_format>\n
+        \   <version major=\"3\" minor=\"1\"/>\n    <supported_versions>\n        <version
+        major=\"3\" minor=\"1\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
         \   </status>\n</data_center>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:54:54 GMT
+  recorded_at: Wed, 07 Nov 2012 15:14:50 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/clusters?search=datacenter=engops-nfs
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/clusters?search=datacenter=Default
     body:
       encoding: US-ASCII
       string: ''
@@ -218,40 +224,43 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:50 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=1rwt1ecAjNTQRAqJHoLl3Xar; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '971'
-      Date:
-      - Wed, 25 Jul 2012 11:53:49 GMT
+      - '1232'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<clusters>\n
-        \   <cluster id=\"3c8af388-cff6-11e0-9267-52540013f702\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702\">\n
-        \       <name>engops-nfs</name>\n        <link rel=\"networks\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702/networks\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702/permissions\"/>\n
-        \       <cpu id=\"Intel Conroe Family\"/>\n        <data_center id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\"/>\n        <memory_policy>\n
-        \           <overcommit percent=\"100\"/>\n            <transparent_hugepages>\n
-        \               <enabled>false</enabled>\n            </transparent_hugepages>\n
-        \       </memory_policy>\n        <scheduling_policy/>\n        <version minor=\"0\"
-        major=\"3\"/>\n        <error_handling>\n            <on_error>migrate</on_error>\n
-        \       </error_handling>\n    </cluster>\n</clusters>\n"
+        \   <cluster href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95\" id=\"99408929-82cf-4dc7-a532-9d998063fa95\">\n
+        \       <name>Default</name>\n        <description>The default server cluster</description>\n
+        \       <link href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/networks\"
+        rel=\"networks\"/>\n        <link href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95/glustervolumes\"
+        rel=\"glustervolumes\"/>\n        <cpu id=\"Intel Westmere Family\"/>\n        <data_center
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\" id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\"/>\n
+        \       <memory_policy>\n            <overcommit percent=\"150\"/>\n            <transparent_hugepages>\n
+        \               <enabled>true</enabled>\n            </transparent_hugepages>\n
+        \       </memory_policy>\n        <scheduling_policy/>\n        <version major=\"3\"
+        minor=\"1\"/>\n        <error_handling>\n            <on_error>migrate</on_error>\n
+        \       </error_handling>\n        <virt_service>true</virt_service>\n        <gluster_service>false</gluster_service>\n
+        \   </cluster>\n</clusters>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:54:54 GMT
+  recorded_at: Wed, 07 Nov 2012 15:14:51 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
     body:
       encoding: US-ASCII
       string: ''
@@ -269,33 +278,34 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:50 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=LZTJU5UvBCGva5EWP4cDTebR; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '715'
-      Date:
-      - Wed, 25 Jul 2012 11:53:49 GMT
+      - '828'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_center
-        id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n
-        \   <name>engops-nfs</name>\n    <description></description>\n    <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \   <storage_type>nfs</storage_type>\n    <storage_format>v1</storage_format>\n
-        \   <version minor=\"0\" major=\"3\"/>\n    <supported_versions>\n        <version
-        minor=\"0\" major=\"3\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\" id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n
+        \   <name>Default</name>\n    <description>The default Data Center</description>\n
+        \   <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n    <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n    <storage_type>nfs</storage_type>\n    <storage_format>v3</storage_format>\n
+        \   <version major=\"3\" minor=\"1\"/>\n    <supported_versions>\n        <version
+        major=\"3\" minor=\"1\"/>\n    </supported_versions>\n    <status>\n        <state>up</state>\n
         \   </status>\n</data_center>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:54:54 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Wed, 07 Nov 2012 15:14:51 GMT
+recorded_with: VCR 2.2.5
