--- a/server/tests/drivers/rhevm/fixtures/test_0002_must_support_listing_of_available_providers.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0002_must_support_listing_of_available_providers.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters?search=
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters?search=
     body:
       encoding: US-ASCII
       string: ''
@@ -20,46 +20,40 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:16:50 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=gKLjX0BzrcWqpc4IqeUSBMLz; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1496'
-      Date:
-      - Wed, 25 Jul 2012 11:51:53 GMT
+      - '923'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_centers>\n
-        \   <data_center id=\"aa585157-a098-48c3-8b5b-70a32e88c263\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263\">\n
-        \       <name>engops-iscsi</name>\n        <description></description>\n        <link
-        rel=\"storagedomains\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/permissions\"/>\n
-        \       <storage_type>iscsi</storage_type>\n        <version minor=\"0\" major=\"3\"/>\n
-        \       <supported_versions>\n            <version minor=\"0\" major=\"3\"/>\n
-        \       </supported_versions>\n        <status>\n            <state>uninitialized</state>\n
-        \       </status>\n    </data_center>\n    <data_center id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n        <name>engops-nfs</name>\n
-        \       <description></description>\n        <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \       <storage_type>nfs</storage_type>\n        <storage_format>v1</storage_format>\n
-        \       <version minor=\"0\" major=\"3\"/>\n        <supported_versions>\n
-        \           <version minor=\"0\" major=\"3\"/>\n        </supported_versions>\n
+        \   <data_center href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\"
+        id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n        <name>Default</name>\n
+        \       <description>The default Data Center</description>\n        <link
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n        <storage_type>nfs</storage_type>\n        <storage_format>v3</storage_format>\n
+        \       <version major=\"3\" minor=\"1\"/>\n        <supported_versions>\n
+        \           <version major=\"3\" minor=\"1\"/>\n        </supported_versions>\n
         \       <status>\n            <state>up</state>\n        </status>\n    </data_center>\n</data_centers>\n"
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
+  recorded_at: Wed, 07 Nov 2012 15:16:51 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters?search=
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters?search=
     body:
       encoding: US-ASCII
       string: ''
@@ -77,46 +71,40 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:16:50 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=xrwKmIJXF8olS0AKMPUoCNws; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1496'
-      Date:
-      - Wed, 25 Jul 2012 11:51:53 GMT
+      - '923'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_centers>\n
-        \   <data_center id=\"aa585157-a098-48c3-8b5b-70a32e88c263\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263\">\n
-        \       <name>engops-iscsi</name>\n        <description></description>\n        <link
-        rel=\"storagedomains\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/permissions\"/>\n
-        \       <storage_type>iscsi</storage_type>\n        <version minor=\"0\" major=\"3\"/>\n
-        \       <supported_versions>\n            <version minor=\"0\" major=\"3\"/>\n
-        \       </supported_versions>\n        <status>\n            <state>uninitialized</state>\n
-        \       </status>\n    </data_center>\n    <data_center id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n        <name>engops-nfs</name>\n
-        \       <description></description>\n        <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \       <storage_type>nfs</storage_type>\n        <storage_format>v1</storage_format>\n
-        \       <version minor=\"0\" major=\"3\"/>\n        <supported_versions>\n
-        \           <version minor=\"0\" major=\"3\"/>\n        </supported_versions>\n
+        \   <data_center href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\"
+        id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n        <name>Default</name>\n
+        \       <description>The default Data Center</description>\n        <link
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n        <storage_type>nfs</storage_type>\n        <storage_format>v3</storage_format>\n
+        \       <version major=\"3\" minor=\"1\"/>\n        <supported_versions>\n
+        \           <version major=\"3\" minor=\"1\"/>\n        </supported_versions>\n
         \       <status>\n            <state>up</state>\n        </status>\n    </data_center>\n</data_centers>\n"
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
+  recorded_at: Wed, 07 Nov 2012 15:16:52 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters?search=
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters?search=
     body:
       encoding: US-ASCII
       string: ''
@@ -134,46 +122,40 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:16:51 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=CdFKHi0h7cIcCW2vasKD2ZcC; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1496'
-      Date:
-      - Wed, 25 Jul 2012 11:51:53 GMT
+      - '923'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_centers>\n
-        \   <data_center id=\"aa585157-a098-48c3-8b5b-70a32e88c263\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263\">\n
-        \       <name>engops-iscsi</name>\n        <description></description>\n        <link
-        rel=\"storagedomains\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/permissions\"/>\n
-        \       <storage_type>iscsi</storage_type>\n        <version minor=\"0\" major=\"3\"/>\n
-        \       <supported_versions>\n            <version minor=\"0\" major=\"3\"/>\n
-        \       </supported_versions>\n        <status>\n            <state>uninitialized</state>\n
-        \       </status>\n    </data_center>\n    <data_center id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n        <name>engops-nfs</name>\n
-        \       <description></description>\n        <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \       <storage_type>nfs</storage_type>\n        <storage_format>v1</storage_format>\n
-        \       <version minor=\"0\" major=\"3\"/>\n        <supported_versions>\n
-        \           <version minor=\"0\" major=\"3\"/>\n        </supported_versions>\n
+        \   <data_center href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\"
+        id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n        <name>Default</name>\n
+        \       <description>The default Data Center</description>\n        <link
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n        <storage_type>nfs</storage_type>\n        <storage_format>v3</storage_format>\n
+        \       <version major=\"3\" minor=\"1\"/>\n        <supported_versions>\n
+        \           <version major=\"3\" minor=\"1\"/>\n        </supported_versions>\n
         \       <status>\n            <state>up</state>\n        </status>\n    </data_center>\n</data_centers>\n"
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
+  recorded_at: Wed, 07 Nov 2012 15:16:52 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters?search=
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters?search=
     body:
       encoding: US-ASCII
       string: ''
@@ -191,46 +173,40 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:16:51 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=wkNofeEasRUic0FTb29WRM3V; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1496'
-      Date:
-      - Wed, 25 Jul 2012 11:51:53 GMT
+      - '923'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_centers>\n
-        \   <data_center id=\"aa585157-a098-48c3-8b5b-70a32e88c263\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263\">\n
-        \       <name>engops-iscsi</name>\n        <description></description>\n        <link
-        rel=\"storagedomains\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/permissions\"/>\n
-        \       <storage_type>iscsi</storage_type>\n        <version minor=\"0\" major=\"3\"/>\n
-        \       <supported_versions>\n            <version minor=\"0\" major=\"3\"/>\n
-        \       </supported_versions>\n        <status>\n            <state>uninitialized</state>\n
-        \       </status>\n    </data_center>\n    <data_center id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n        <name>engops-nfs</name>\n
-        \       <description></description>\n        <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \       <storage_type>nfs</storage_type>\n        <storage_format>v1</storage_format>\n
-        \       <version minor=\"0\" major=\"3\"/>\n        <supported_versions>\n
-        \           <version minor=\"0\" major=\"3\"/>\n        </supported_versions>\n
+        \   <data_center href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\"
+        id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n        <name>Default</name>\n
+        \       <description>The default Data Center</description>\n        <link
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n        <storage_type>nfs</storage_type>\n        <storage_format>v3</storage_format>\n
+        \       <version major=\"3\" minor=\"1\"/>\n        <supported_versions>\n
+        \           <version major=\"3\" minor=\"1\"/>\n        </supported_versions>\n
         \       <status>\n            <state>up</state>\n        </status>\n    </data_center>\n</data_centers>\n"
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
+  recorded_at: Wed, 07 Nov 2012 15:16:52 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/datacenters?search=
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters?search=
     body:
       encoding: US-ASCII
       string: ''
@@ -248,41 +224,35 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:16:52 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=s-+u0mGBM6zOGcIdQXBcK0xV; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1496'
-      Date:
-      - Wed, 25 Jul 2012 11:51:53 GMT
+      - '923'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<data_centers>\n
-        \   <data_center id=\"aa585157-a098-48c3-8b5b-70a32e88c263\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263\">\n
-        \       <name>engops-iscsi</name>\n        <description></description>\n        <link
-        rel=\"storagedomains\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/aa585157-a098-48c3-8b5b-70a32e88c263/permissions\"/>\n
-        \       <storage_type>iscsi</storage_type>\n        <version minor=\"0\" major=\"3\"/>\n
-        \       <supported_versions>\n            <version minor=\"0\" major=\"3\"/>\n
-        \       </supported_versions>\n        <status>\n            <state>uninitialized</state>\n
-        \       </status>\n    </data_center>\n    <data_center id=\"645e425e-66fe-4ac9-8874-537bd10ef08d\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d\">\n        <name>engops-nfs</name>\n
-        \       <description></description>\n        <link rel=\"storagedomains\"
-        href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/storagedomains\"/>\n
-        \       <link rel=\"permissions\" href=\"/api/datacenters/645e425e-66fe-4ac9-8874-537bd10ef08d/permissions\"/>\n
-        \       <storage_type>nfs</storage_type>\n        <storage_format>v1</storage_format>\n
-        \       <version minor=\"0\" major=\"3\"/>\n        <supported_versions>\n
-        \           <version minor=\"0\" major=\"3\"/>\n        </supported_versions>\n
+        \   <data_center href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a\"
+        id=\"9df72b84-0234-11e2-9b87-9386d9b09d4a\">\n        <name>Default</name>\n
+        \       <description>The default Data Center</description>\n        <link
+        href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/storagedomains\"
+        rel=\"storagedomains\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/permissions\"
+        rel=\"permissions\"/>\n        <link href=\"/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a/quotas\"
+        rel=\"quotas\"/>\n        <storage_type>nfs</storage_type>\n        <storage_format>v3</storage_format>\n
+        \       <version major=\"3\" minor=\"1\"/>\n        <supported_versions>\n
+        \           <version major=\"3\" minor=\"1\"/>\n        </supported_versions>\n
         \       <status>\n            <state>up</state>\n        </status>\n    </data_center>\n</data_centers>\n"
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Wed, 07 Nov 2012 15:16:53 GMT
+recorded_with: VCR 2.2.5
