--- a/server/tests/drivers/rhevm/fixtures/test_0005_must_throw_proper_exception_when_destroying_used_image.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0005_must_throw_proper_exception_when_destroying_used_image.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872
     body:
       encoding: US-ASCII
       string: ''
@@ -17,88 +17,35 @@ http_interactions:
       - Ruby
   response:
     status:
-      code: 200
-      message: OK
+      code: 404
+      message: Not Found
     headers:
-      Server:
-      - Apache-Coyote/1.1
-      Pragma:
-      - No-cache
-      Cache-Control:
-      - no-cache
-      Expires:
-      - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Date:
+      - Wed, 07 Nov 2012 15:12:08 GMT
       Content-Type:
-      - application/xml
+      - text/html;charset=utf-8
       Content-Length:
-      - '1863'
-      Date:
-      - Wed, 25 Jul 2012 11:52:00 GMT
+      - '976'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<template
-        id=\"014910a0-da7a-4ce2-b88a-eb9b1e55c37f\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f\">\n
-        \   <name>14006c95-0a7f-4209-ac15-2162ac73e4c4</name>\n    <description>Template
-        by iwhd</description>\n    <actions>\n        <link rel=\"export\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/export\"/>\n
-        \   </actions>\n    <link rel=\"disks\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/disks\"/>\n
-        \   <link rel=\"nics\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/nics\"/>\n
-        \   <link rel=\"cdroms\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/cdroms\"/>\n
-        \   <link rel=\"snapshots\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/snapshots\"/>\n
-        \   <link rel=\"tags\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/tags\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/permissions\"/>\n
-        \   <link rel=\"statistics\" href=\"/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f/statistics\"/>\n
-        \   <type>server</type>\n    <status>\n        <state>ok</state>\n    </status>\n
-        \   <memory>4294967296</memory>\n    <cpu>\n        <topology cores=\"1\"
-        sockets=\"1\"/>\n    </cpu>\n    <os type=\"other_linux\">\n        <boot
-        dev=\"hd\"/>\n        <kernel></kernel>\n        <initrd></initrd>\n        <cmdline></cmdline>\n
-        \   </os>\n    <cluster id=\"3c8af388-cff6-11e0-9267-52540013f702\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702\"/>\n
-        \   <creation_time>2012-03-12T11:51:27.000+01:00</creation_time>\n    <origin>rhev</origin>\n
-        \   <high_availability>\n        <enabled>false</enabled>\n        <priority>1</priority>\n
-        \   </high_availability>\n    <display>\n        <type>vnc</type>\n        <monitors>1</monitors>\n
-        \   </display>\n    <stateless>false</stateless>\n    <usb>\n        <enabled>false</enabled>\n
-        \   </usb>\n</template>\n"
+      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
+        {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
+        H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
+        H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
+        BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;}
+        B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;}
+        P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A
+        {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
+        Status 404 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
+        <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR
+        size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
-    method: delete
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/014910a0-da7a-4ce2-b88a-eb9b1e55c37f
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/xml
-      Accept-Encoding:
-      - gzip, deflate
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - Apache-Coyote/1.1
-      Pragma:
-      - No-cache
-      Cache-Control:
-      - no-cache
-      Expires:
-      - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
-      Date:
-      - Wed, 25 Jul 2012 11:52:00 GMT
-    body:
-      encoding: US-ASCII
-      string: ''
-    http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
+  recorded_at: Wed, 07 Nov 2012 15:12:09 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5
     body:
       encoding: US-ASCII
       string: ''
@@ -116,50 +63,48 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:13:34 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=oVpIbxzLgZI8CIgbvUVvvWXk; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1847'
-      Date:
-      - Wed, 25 Jul 2012 11:55:43 GMT
+      - '1608'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<template
-        id=\"dfa924b7-83e8-4a5c-9d5c-1270fd0c0872\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872\">\n
-        \   <name>rhel61-network</name>\n    <description>RHEL 6.1 with networking</description>\n
-        \   <actions>\n        <link rel=\"export\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/export\"/>\n
-        \   </actions>\n    <link rel=\"disks\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/disks\"/>\n
-        \   <link rel=\"nics\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/nics\"/>\n
-        \   <link rel=\"cdroms\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/cdroms\"/>\n
-        \   <link rel=\"snapshots\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/snapshots\"/>\n
-        \   <link rel=\"tags\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/tags\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/permissions\"/>\n
-        \   <link rel=\"statistics\" href=\"/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872/statistics\"/>\n
-        \   <type>server</type>\n    <status>\n        <state>ok</state>\n    </status>\n
-        \   <memory>2147483648</memory>\n    <cpu>\n        <topology cores=\"2\"
-        sockets=\"1\"/>\n    </cpu>\n    <os type=\"rhel_6x64\">\n        <boot dev=\"hd\"/>\n
-        \       <kernel></kernel>\n        <initrd></initrd>\n        <cmdline></cmdline>\n
-        \   </os>\n    <cluster id=\"3c8af388-cff6-11e0-9267-52540013f702\" href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702\"/>\n
-        \   <creation_time>2011-10-06T13:31:30.467+02:00</creation_time>\n    <origin>rhev</origin>\n
-        \   <high_availability>\n        <enabled>false</enabled>\n        <priority>1</priority>\n
-        \   </high_availability>\n    <display>\n        <type>vnc</type>\n        <monitors>1</monitors>\n
+        href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5\" id=\"5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5\">\n
+        \   <actions>\n        <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/export\"
+        rel=\"export\"/>\n    </actions>\n    <name>rhel63server</name>\n    <description>RHEL
+        6.3 Server Default</description>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/disks\"
+        rel=\"disks\"/>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/nics\"
+        rel=\"nics\"/>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/cdroms\"
+        rel=\"cdroms\"/>\n    <link href=\"/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5/permissions\"
+        rel=\"permissions\"/>\n    <type>server</type>\n    <status>\n        <state>ok</state>\n
+        \   </status>\n    <memory>1073741824</memory>\n    <cpu>\n        <topology
+        sockets=\"1\" cores=\"1\"/>\n    </cpu>\n    <os type=\"rhel_6x64\">\n        <boot
+        dev=\"hd\"/>\n        <kernel></kernel>\n        <initrd></initrd>\n        <cmdline></cmdline>\n
+        \   </os>\n    <cluster href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95\"
+        id=\"99408929-82cf-4dc7-a532-9d998063fa95\"/>\n    <creation_time>2012-09-19T15:20:10.740+02:00</creation_time>\n
+        \   <origin>rhev</origin>\n    <high_availability>\n        <enabled>false</enabled>\n
+        \       <priority>1</priority>\n    </high_availability>\n    <display>\n
+        \       <type>vnc</type>\n        <monitors>1</monitors>\n        <allow_override>false</allow_override>\n
         \   </display>\n    <stateless>false</stateless>\n    <usb>\n        <enabled>false</enabled>\n
         \   </usb>\n</template>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:56:49 GMT
+  recorded_at: Wed, 07 Nov 2012 15:13:35 GMT
 - request:
     method: delete
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5
     body:
       encoding: US-ASCII
       string: ''
@@ -175,21 +120,19 @@ http_interactions:
       code: 400
       message: Bad Request
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:13:34 GMT
       Content-Type:
       - application/xml
       Content-Length:
-      - '209'
-      Date:
-      - Wed, 25 Jul 2012 11:55:44 GMT
+      - '215'
       Connection:
       - close
     body:
       encoding: US-ASCII
       string: ! '<?xml version="1.0" encoding="UTF-8" standalone="yes"?><fault><reason>Operation
         Failed</reason><detail>[Cannot delete Template. Template is being used by
-        the following VMs: mfojtik-packaging.]</detail></fault>'
+        the following VMs: tests0,JoeV_06112012_01.]</detail></fault>'
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:56:49 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Wed, 07 Nov 2012 15:13:35 GMT
+recorded_with: VCR 2.2.5
