--- a/server/tests/drivers/rhevm/fixtures/test_0006_must_support_destroying_images.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0006_must_support_destroying_images.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/354455c9-d075-46f7-bf41-7df48d0fe925
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927
     body:
       encoding: US-ASCII
       string: ''
@@ -20,17 +20,17 @@ http_interactions:
       code: 404
       message: Not Found
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:12:09 GMT
       Content-Type:
       - text/html;charset=utf-8
       Content-Length:
-      - '950'
-      Date:
-      - Wed, 25 Jul 2012 11:51:54 GMT
+      - '976'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
-      string: ! '<html><head><title>JBoss Web/2.1.11.GA - Error report</title><style><!--H1
+      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
         {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
         H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
         H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
@@ -40,12 +40,12 @@ http_interactions:
         {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
         Status 404 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
         <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR
-        size="1" noshade="noshade"><h3>JBoss Web/2.1.11.GA</h3></body></html>'
+        size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
+  recorded_at: Wed, 07 Nov 2012 15:12:10 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be
     body:
       encoding: US-ASCII
       string: ''
@@ -63,50 +63,47 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:34 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
+      Set-Cookie:
+      - JSESSIONID=Lyi7RciWtZZILEHgJh9p-+8p; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
-      - '1809'
-      Date:
-      - Wed, 25 Jul 2012 11:54:53 GMT
+      - '1579'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<template
-        id=\"a90de8a2-0619-4625-b72e-db0ff65ef927\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927\">\n
-        \   <name>6fd96121-1c8c-4bb6-8dbd-e33c470d7769</name>\n    <description>Template
-        by iwhd</description>\n    <actions>\n        <link rel=\"export\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/export\"/>\n
-        \   </actions>\n    <link rel=\"disks\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/disks\"/>\n
-        \   <link rel=\"nics\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/nics\"/>\n
-        \   <link rel=\"cdroms\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/cdroms\"/>\n
-        \   <link rel=\"snapshots\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/snapshots\"/>\n
-        \   <link rel=\"tags\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/tags\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/permissions\"/>\n
-        \   <link rel=\"statistics\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/statistics\"/>\n
-        \   <type>server</type>\n    <status>\n        <state>ok</state>\n    </status>\n
-        \   <memory>536870912</memory>\n    <cpu>\n        <topology cores=\"1\" sockets=\"1\"/>\n
-        \   </cpu>\n    <os type=\"other_linux\">\n        <boot dev=\"cdrom\"/>\n
-        \       <boot dev=\"hd\"/>\n    </os>\n    <cluster id=\"3c8af388-cff6-11e0-9267-52540013f702\"
-        href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702\"/>\n    <creation_time>2012-01-17T12:33:41.000+01:00</creation_time>\n
-        \   <origin>rhev</origin>\n    <high_availability>\n        <enabled>false</enabled>\n
-        \       <priority>0</priority>\n    </high_availability>\n    <display>\n
-        \       <type>vnc</type>\n        <monitors>1</monitors>\n    </display>\n
-        \   <stateless>false</stateless>\n    <usb>\n        <enabled>true</enabled>\n
-        \   </usb>\n</template>\n"
+        href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be\" id=\"6d0285c9-682d-4e0f-8cf8-abd3ac9530be\">\n
+        \   <actions>\n        <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/export\"
+        rel=\"export\"/>\n    </actions>\n    <name>thrcka</name>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/disks\"
+        rel=\"disks\"/>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/nics\"
+        rel=\"nics\"/>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/cdroms\"
+        rel=\"cdroms\"/>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/permissions\"
+        rel=\"permissions\"/>\n    <type>server</type>\n    <status>\n        <state>ok</state>\n
+        \   </status>\n    <memory>536870912</memory>\n    <cpu>\n        <topology
+        sockets=\"1\" cores=\"1\"/>\n    </cpu>\n    <os type=\"unassigned\">\n        <boot
+        dev=\"network\"/>\n        <boot dev=\"hd\"/>\n        <kernel></kernel>\n
+        \       <initrd></initrd>\n        <cmdline></cmdline>\n    </os>\n    <cluster
+        href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95\" id=\"99408929-82cf-4dc7-a532-9d998063fa95\"/>\n
+        \   <creation_time>2012-10-11T13:44:42.655+02:00</creation_time>\n    <origin>rhev</origin>\n
+        \   <high_availability>\n        <enabled>false</enabled>\n        <priority>1</priority>\n
+        \   </high_availability>\n    <display>\n        <type>spice</type>\n        <monitors>1</monitors>\n
+        \       <allow_override>false</allow_override>\n    </display>\n    <stateless>false</stateless>\n
+        \   <usb>\n        <enabled>false</enabled>\n    </usb>\n</template>\n"
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:55:58 GMT
+  recorded_at: Wed, 07 Nov 2012 15:14:35 GMT
 - request:
     method: delete
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be
     body:
       encoding: US-ASCII
       string: ''
@@ -115,43 +112,6 @@ http_interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - Apache-Coyote/1.1
-      Pragma:
-      - No-cache
-      Cache-Control:
-      - no-cache
-      Expires:
-      - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
-      Date:
-      - Wed, 25 Jul 2012 11:54:53 GMT
-    body:
-      encoding: US-ASCII
-      string: ''
-    http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:55:58 GMT
-- request:
-    method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/xml
-      Accept-Encoding:
-      - gzip, deflate
-      Content-Type:
-      - application/xml
       User-Agent:
       - Ruby
   response:
@@ -159,50 +119,30 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:35 GMT
       Pragma:
       - No-cache
       Cache-Control:
       - no-cache
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
-      X-Powered-By:
-      - Servlet 2.5; JBoss-5.0/JBossWeb-2.1
-      Content-Type:
-      - application/xml
+      Set-Cookie:
+      - JSESSIONID=DBCsquEYD-l5J2LvDdoN8YUw; Path=/api; Secure
       Content-Length:
-      - '1813'
-      Date:
-      - Wed, 25 Jul 2012 11:54:53 GMT
+      - '0'
+      Connection:
+      - close
+      Content-Type:
+      - text/plain; charset=UTF-8
     body:
       encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<template
-        id=\"a90de8a2-0619-4625-b72e-db0ff65ef927\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927\">\n
-        \   <name>6fd96121-1c8c-4bb6-8dbd-e33c470d7769</name>\n    <description>Template
-        by iwhd</description>\n    <actions>\n        <link rel=\"export\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/export\"/>\n
-        \   </actions>\n    <link rel=\"disks\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/disks\"/>\n
-        \   <link rel=\"nics\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/nics\"/>\n
-        \   <link rel=\"cdroms\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/cdroms\"/>\n
-        \   <link rel=\"snapshots\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/snapshots\"/>\n
-        \   <link rel=\"tags\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/tags\"/>\n
-        \   <link rel=\"permissions\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/permissions\"/>\n
-        \   <link rel=\"statistics\" href=\"/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927/statistics\"/>\n
-        \   <type>server</type>\n    <status>\n        <state>locked</state>\n    </status>\n
-        \   <memory>536870912</memory>\n    <cpu>\n        <topology cores=\"1\" sockets=\"1\"/>\n
-        \   </cpu>\n    <os type=\"other_linux\">\n        <boot dev=\"cdrom\"/>\n
-        \       <boot dev=\"hd\"/>\n    </os>\n    <cluster id=\"3c8af388-cff6-11e0-9267-52540013f702\"
-        href=\"/api/clusters/3c8af388-cff6-11e0-9267-52540013f702\"/>\n    <creation_time>2012-01-17T12:33:41.000+01:00</creation_time>\n
-        \   <origin>rhev</origin>\n    <high_availability>\n        <enabled>false</enabled>\n
-        \       <priority>0</priority>\n    </high_availability>\n    <display>\n
-        \       <type>vnc</type>\n        <monitors>1</monitors>\n    </display>\n
-        \   <stateless>false</stateless>\n    <usb>\n        <enabled>true</enabled>\n
-        \   </usb>\n</template>\n"
+      string: ''
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:55:58 GMT
+  recorded_at: Wed, 07 Nov 2012 15:14:36 GMT
 - request:
     method: get
-    uri: https://vdcadmin%40rhev.lab.eng.brq.redhat.com:123456@rhev30-dc.lab.eng.brq.redhat.com:8443/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be
     body:
       encoding: US-ASCII
       string: ''
@@ -220,17 +160,17 @@ http_interactions:
       code: 404
       message: Not Found
     headers:
-      Server:
-      - Apache-Coyote/1.1
+      Date:
+      - Wed, 07 Nov 2012 15:14:35 GMT
       Content-Type:
       - text/html;charset=utf-8
       Content-Length:
-      - '950'
-      Date:
-      - Wed, 25 Jul 2012 11:55:03 GMT
+      - '976'
+      Connection:
+      - close
     body:
       encoding: US-ASCII
-      string: ! '<html><head><title>JBoss Web/2.1.11.GA - Error report</title><style><!--H1
+      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
         {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
         H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
         H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
@@ -240,7 +180,7 @@ http_interactions:
         {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
         Status 404 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
         <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR
-        size="1" noshade="noshade"><h3>JBoss Web/2.1.11.GA</h3></body></html>'
+        size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
     http_version: 
-  recorded_at: Wed, 25 Jul 2012 11:56:08 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Wed, 07 Nov 2012 15:14:37 GMT
+recorded_with: VCR 2.2.5
